--- a/context-menu/react-createPortal/package.json
+++ b/context-menu/react-createPortal/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "style.css": "^1.0.0"
+    "react-dom": "^17.0.2"
   }
 }
