--- a/scroll-spy/throttle-debounce/package.json
+++ b/scroll-spy/throttle-debounce/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "react",
+  "name": "throttle-debounce",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html watch"
   },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "parcel-bundler": "^1.12.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+  "license": "ISC"
 }
