--- a/infinite-scroll/intersectionObserver/package.json
+++ b/infinite-scroll/intersectionObserver/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "jquery",
+  "name": "intersection-observer",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
   "scripts": {
     "start": "parcel index.html watch"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "jquery": "^3.6.0"
-  },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
-  }
+  },
+  "dependencies": {
+    "lorem-ipsum": "^2.0.3",
+    "uuid": "^3.4.0"
+  },
+  "browserslist": [
+    "since 2017-06"
+  ]
 }
