--- a/infinite-scroll/react-intersectionObserver/package.json
+++ b/infinite-scroll/react-intersectionObserver/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "basic",
+  "name": "react-intersectionObserver",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
-    "start": "parcel index.html watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,8 @@
   },
   "dependencies": {
     "lorem-ipsum": "^2.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "uuid": "^3.4.0"
-  },
-  "browserslist": [
-    "since 2017-06"
-  ]
+  }
 }
