--- a/infinite-scroll/intersectionObserver/package.json
+++ b/infinite-scroll/intersectionObserver/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intersection-observer",
+  "name": "intersectionObserver",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
