--- a/infinite-scroll/react-intersectionObserver/package.json
+++ b/infinite-scroll/react-intersectionObserver/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html watch"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "uuid": "^3.4.0"
-  }
+  },
+  "browserslist": [
+    "since 2017-06"
+  ]
 }
